<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".SamplesActivity"
    >

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/url_github"
      android:gravity="center"
      android:layout_marginBottom="@dimen/view_vertical_margin"
      />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/string_tip_logcat"
      android:textStyle="bold"
      android:gravity="center"
      android:layout_marginBottom="@dimen/view_vertical_margin"
      />

  <Button
      android:id="@+id/btn_sampleGLogAnnotation"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/btn_text_sample_glog_annotation"
      android:layout_marginBottom="@dimen/button_vertical_margin"
      />

  <Button
      android:id="@+id/btn_sampleGTraceAnnotation"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/btn_text_sample_gtrace_annotation"
      android:layout_marginBottom="@dimen/button_vertical_margin"
      />

  <Button
      android:id="@+id/btn_sampleGWatchAnnotation"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/btn_text_sample_gwatch_annotation"
      android:layout_marginBottom="@dimen/button_vertical_margin"
      />

  <Button
      android:id="@+id/btn_sampleStrictModeAnnotation"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/btn_text_sample_strictmode_annotation"
      android:layout_marginBottom="@dimen/button_vertical_margin"
      />

  <Button
      android:id="@+id/btn_sampleGandalfStats"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/btn_text_sample_gandalfstats"
      android:layout_marginBottom="@dimen/button_vertical_margin"
      />

</LinearLayout>